testsuite/bsc.real/evaluator/errors/BitsToNaN2.bsv.bsc-vcomp-out.expected
checking package dependencies
compiling BitsToNaN2.bsv
code generation for sysBitsToNaN2 starts
Error: "BitsToNaN2.bsv", line 9, column 15: (G0115)
  The $bitstoreal task cannot be used to create values which are not a number
  (NaN).
  During elaboration of the body of rule `r' at "BitsToNaN2.bsv", line 13,
  column 10.
  During elaboration of `sysBitsToNaN2' at "BitsToNaN2.bsv", line 2, column 8.
